<resources>
    <string name="app_name">eCommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter username</string>
    <string name="version_prefix">v</string>
    <string name="enter_valid_email_id">Enter valid email id</string>
    <string name="password_can_not_exceed_8_characters">Password can not exceed 8 characters</string>
    <string name="create_account">Create Account</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="continue_with_login">Continue with login</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="user_registered_successfully">User registered successfully</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="thanks_for_registering">Thanks for Registering!</string>
    <string name="your_registration_has_been_successful">Your registration has been successful.</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">settings</string>
    <string name="select_language">Select Language</string>
    <string name="title_categories">Categories</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="title_home">Home</string>
    <string name="search_for">Search for</string>
    <string name="title_search">Search</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="category_name">Category Name</string>
    <string name="strike_25000_strike"><strike> ₹25000 </strike></string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="no_product_found">No Product Found!</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="best_deals">Best Deals</string>
</resources>