<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_background_image"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".view.fragments.AuthFragment">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/auth_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/let_s_get_started"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/AuthCustomLoginButton"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/continue_with_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        style="@style/AuthCustomSignUpButton"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/create_account" />


</LinearLayout>